# Coursework_6sem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  segment_tree.h  segment_tree_tests.cpp
Benchmarks/: bench.cpp  bench.h  benchmarks.cpp
Graphics/: GraphicsBuilder.ipynb
Policies/: abstract_mass_policy.h
Policies/AssignAndSum/: assign_sum_policy.h  assign_sum_slow_policy.h
SegmentTree/: assign_sum_tree.h  classic_segment_tree.h  tree_v1.h
SegmentTrees/: abstract_tree.h
SegmentTrees/ClassicTree/: assign_sum_tree.h  classic_segment_tree.h  classic_tree_tests.cpp
SegmentTrees/ParrallelTrees/Version0/: tree_v0.h  tree_v0_tests.cpp
SegmentTrees/ParrallelTrees/Version1/: parallel_tree_v1_tests.cpp  tree_v1.h  tree_v1_tests.cpp
SegmentTrees/ParrallelTrees/Version2/: parallel_tree_v2_tests.cpp  tree_v2.h  tree_v2_tests.cpp
SegmentTrees/ParrallelTrees/Version3/: tree_v3.h  tree_v3_modified.h  tree_v3_tests.cpp
SegmentTrees/ParrallelTrees/Version4/: tree_v4.h  tree_v4_modified.h  tree_v4_tests.cpp
SegmentTrees/ParrallelTrees/Version5/: tree_v5.h  tree_v5_tests.cpp
Strategies/AssignAndSum/: assign_sum_strategy.h
Tests/: classic_tree_tests.cpp  parallel_tree_v1_tests.cpp
Utils/: array_builder.cpp  buffered_channel.h  concurrentqueue.h  fast_queue.h  test_templates.h
